25 June 2025: Yorgos
	- Fix #1247: forward-first: ssl handshake failed on root nameservers.

11 April 2025: Yorgos
	- Merge #1265: Fix WSAPoll.

10 April 2025: Wouter
	- Fix for print of connection type in log-replies for dot and doh.

9 April 2025: Wouter
	- Fix to detect if atomic_store links in configure.
	- Fix #1264: unbound 1.22.0 leaks memory when doing DoH.

8 April 2025: Wouter
	- Tag for 1.23.0rc1.
	- Fix fast_reload to print chroot with config file name.

7 April 2025: Yorgos
	- Merge #902: DNS Error Reporting (RFC 9567). Introduces new
	  configuration option 'dns-error-reporting' and new statistics for
	  'num.dns_error_reports'.

4 April 2025: Wouter
	- Fix mesh_copy_client_info to omit null contents from copy.
	- Fix comment name in the rpz nsdname test.
	- Fix nettle compile for warnings and ticket keys.
	- Fix redis_replica test for unused option defaults and log printout.
	- Fix test to speed up common.sh script kill_pid.
	- Fix to update common.sh for speed of kill_pid.

4 April 2025: Yorgos
	- Merge #1019: Redis read-only replica support.
	  Introduces new 'redis-replica-*' options for the Redis cache backend.

3 April 2025: Wouter
	- Fix #1263: Exempt loopback addresses from wait-limit.
	- Fix wait-limit-netblock and wait-limit-cookie-netblock config parse
	  to allow two arguments.
	- Fix ub_event and include dnstap and win_svc headers.
	- Fix test for stat_values for wait limit defaults for localhost.
	- Fix parameter unused warning in net_help.c.

2 April 2025: Yorgos
	- Merge #1262 from markyang92, fix build with
	  'gcc-15 -Wbuiltin-declaration-mismatch' error in compat/malloc.c.
	- For #1262, ifdef is no longer needed.

2 April 2025: Wouter
	- Fix unbound-control test so it counts the new flush_negative output,
	  also answers the _ta probe from testns and prints command output
	  and skip a thread specific test when no threads are available.
	- Fix that ub_event has the facility to deal with callbacks for