@@ -1,5 +1,8 @@
 25 June 2025: Yorgos
 	- Fix #1247: forward-first: ssl handshake failed on root nameservers.
+	- For #1247, turn off fetch-policy for delegation when looking into
+	  parent side name servers that may not update the addresses and hit
+	  NXNS limits.
 
 11 April 2025: Yorgos
 	- Merge #1265: Fix WSAPoll.
